force-app/main/default/objects/Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Please provide the end date.</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>