force-app/main/default/objects/Event__c/fields/Fequency__c.field-meta.xml
<CustomField>
    <fullName>Fequency__c</fullName>
    <description>Is the event will occur daily or weekly.</description>
    <label>Fequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurring__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>