force-app/main/default/objects/Event__c/fields/Location_Address_Book__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Address Book</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>