force-app/main/default/objects/Event__c/fields/Location_verified__c.field-meta.xml
<CustomField>
    <fullName>Location_verified__c</fullName>
    <description>If Location is verified the it will automatically check the field.</description>
    <formula>Location_Address_Book__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>