force-app/main/default/objects/Event__c/fields/People_atttending__c.field-meta.xml
<CustomField>
    <fullName>People_atttending__c</fullName>
    <description>How many people are attending the events.</description>
    <label>People atttending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>