force-app/main/default/objects/Event__c/validationRules/Event_Type_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_Rule</fullName>
    <active>true</active>
    <description>-If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>AND(ISPICKVAL(Event_Type__c ,&quot;virtual&quot;),  NOT(ISBLANK(Location_Address_Book__c) ))</errorConditionFormula>
    <errorDisplayField>Location_Address_Book__c</errorDisplayField>
    <errorMessage>When event type is virtual then no need to select Location.</errorMessage>
</ValidationRule>