force-app/main/default/objects/Event__c/validationRules/Recurring_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Rule</fullName>
    <active>true</active>
    <description>If Recurring? checkbox is checked then user must need to fill Frequency field &amp; If checkbox is unchecked then User cannot select Frequency field.</description>
    <errorConditionFormula>OR(AND( ISPICKVAL( Fequency__c ,&apos;&apos;),Recurring__c),AND(NOT( Recurring__c ),NOT( ISPICKVAL( Fequency__c , &apos;&apos;) )))</errorConditionFormula>
    <errorDisplayField>Fequency__c</errorDisplayField>
    <errorMessage>Recurring checkbox must be checked to fill the frequency field.</errorMessage>
</ValidationRule>